--- a/04-jquery/homework/unit-4-game/assets/css/style.css
+++ b/04-jquery/homework/unit-4-game/assets/css/style.css
@@ -54,7 +54,7 @@ h1 {
   justify-content: space-around;
 }
 
-.crystals img {
+.crystal img {
   max-height: 150px;
   max-width: 150px;
   width: 100%;
